# hostctl

./: Cargo.toml  LICENSE  README.md  hostctl  hostctl.conf
.github/workflows/: build-and-run.yml  common-steps.yml  release-tarball.yml
misc/: hostctl_bash_completion.sh  hostctl_fish_completion.sh  hostctl_zsh_completion.sh
misc/deprecated/: hostctl
recipe/: apache_check  apache_reload  apache_restart  apache_status  check_chrony  health  health_iostat  health_mem  puppet_off  puppet_on  puppet_run  puppet_setup  system_crash_debug  system_info  system_info_full  system_swap_debug  system_update
src/: execute.rs  groups_config.rs  main.rs  parameters.rs  utils.rs
