[package]
name = "hostctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hostname = "0.3.1"
libc = "0.2.153"
env_logger = "0.11.3"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
inline_colorization = "0.1.6"
